[FIX] - Timeline years overlap

--- a/css/style.css
+++ b/css/style.css
@@ -2906,6 +2906,7 @@ h6 {
   text-align: center;
   color: white;
   transform: translate(-50%, -50%);
+  z-index: 2;
 }
 
 .component-years h3 {
